--- a/_sass/minimal-mistakes/_reset.scss
+++ b/_sass/minimal-mistakes/_reset.scss
@@ -15,11 +15,13 @@ html {
   }
 
   @include breakpoint($large) {
-    font-size: 20px;
+    /*반응형 글씨크기가 너무 부담스러워서 18px로 고정!*/
+    font-size: 18px;
   }
 
   @include breakpoint($x-large) {
-    font-size: 22px;
+    /*반응형 글씨크기가 너무 부담스러워서 18px로 고정!*/
+    font-size: 18px;
   }
 
   -webkit-text-size-adjust: 100%;
