--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -6,6 +6,14 @@
    Default
    ========================================================================== */
 
+.sidebar__top {
+  position: fixed;
+  bottom: 1.5em;
+  right: 2em;
+  z-index: 10;
+} /*page to top 을 위한 코드*/
+
+
 .sidebar {
   @include clearfix();
   // @include breakpoint(max-width $large) {
