--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,13 +28,11 @@
         {% include_cached search/search_form.html %}
       </div>
     {% endif %}
-    
-    
-    <aside class="sidebar__top">
-    <a href="#site-nav"> <i class="fas fa-angle-double-up fa-2x"></i></a>
-    </aside>
-
+ 
     <div id="footer" class="page__footer">
+    <aside class="sidebar__top">
+    <a href="#site-nav"><button title="↑">Top</button></a>
+    </aside>
       <footer>
         {% include footer/custom.html %}
         {% include_cached footer.html %}
