page to top 아이콘 수정

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
  
     <div id="footer" class="page__footer">
     <aside class="sidebar__top">
-    <a href="#site-nav"><i class="fal fa-arrow-to-top"></i>
+    <a href="#site-nav"><i class="fal fa-arrow-to-top"></i></a>
     </aside>
       <footer>
         {% include footer/custom.html %}
