--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
  
     <div id="footer" class="page__footer">
     <aside class="sidebar__top">
-    <a href="#site-nav"><i class="fas fa-angle-double-up fa-2x"></i></a>
+    <a href="#site-nav"><i class="fas fa-arrow-up"></i></a> 
     </aside>
       <footer>
         {% include footer/custom.html %}
